--- a/index.css
+++ b/index.css
@@ -24,22 +24,22 @@ html, body {
 }
 
 main {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
     height: 100%;
     height: 100svh;
+    display: flex;
     padding: 1rem;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 main > img {
     width: clamp(120px, 30%, 180px);
     filter: saturate(10%) hue-rotate(-30deg);
     transition: 1.5s all;
-    border-radius: 40%;
     margin-top: -2.5rem;
+    border-radius: 40%;
 }
 
 main > img:hover {
@@ -67,9 +67,11 @@ main > h2 {
 }
 
 footer {
+    width: 100%;
+    bottom: 2.5rem;
     display: flex;
     position: fixed;
-    bottom: 2.5rem;
+    justify-content: center;
 }
 
 footer > a {
@@ -77,22 +79,15 @@ footer > a {
     height: 4rem;
     padding: 1em;
     display: flex;
-    align-items: center;
-    justify-content: center;
-
     box-sizing: border-box;
     transition: 0.5s all;
+    align-items: center;
     border-radius: 40%;
+    justify-content: center;
 }
 
-footer > a img {
+footer > a > img {
     width: 100%;
-}
-
-@media (max-width: 600px) {
-    footer {
-        grid-template-columns: repeat(2, 1fr);
-    }
 }
 
 footer > a:hover {
