--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@
     --content-color: #6b7a9a;
 }
 
+::selection {
+    background: hsl(227, 40%, 51%, 0.3);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -70,17 +74,22 @@ main > h2 {
     font-family: var(--subtitle-font);
 }
 
-main > a {
+main > a, section > a {
     color: var(--accent-color);
-    font-size: clamp(1.3rem, 3vw, 1.8rem);
+    font-size: 1.2rem;
     font-family: var(--subtitle-font);
     text-decoration: none;
+}
+
+main > a:hover, section > a:hover {
+    filter: saturate(150%);
 }
 
 section {
     max-width: 900px;
     margin: 2rem auto;
     padding: 2rem;
+    text-align: center;
 }
 
 section > h2 {
@@ -104,11 +113,7 @@ section > h3 {
 
 section > a {
     display: inline-block;
-    color: var(--accent-color);
     padding: .5rem .8rem;
-    font-size: 1.2rem;
-    font-family: var(--subtitle-font);
-    text-decoration: none;
 }
 
 .grid {
@@ -120,13 +125,14 @@ section > a {
 .grid img {
     width: 100%;
     filter: saturate(10%) hue-rotate(-30deg);
-    transition: 0.8s all;
+    transition: 0.6s all;
     border-radius: 1rem;
+    border: 4px solid transparent;
 }
 
 .grid img:hover {
     filter: none;
-    transform: scale(0.97);
+    border: 4px solid var(--accent-color);
 }
 
 #slides {
