--- a/index.css
+++ b/index.css
@@ -256,3 +256,10 @@ footer > a[title="Resume"] {
     display: inline-block;
     animation: coucou 10s ease-in-out infinite 1.5s;
 }
+
+@media (prefers-reduced-motion) {
+    * {
+        animation-duration: 0;
+        animation-delay: 0;
+    }
+}
