--- a/index.css
+++ b/index.css
@@ -4,10 +4,10 @@
     --title-font: 'Outfit', sans-serif;
     --subtitle-font: 'Source Serif 4', sans-serif;
 
-    --bg-color: #ccd3df;
+    --bg-color: #dfe3f1;
     --accent-color: #5267b4;
     --title-color: #404459;
-    --sub-bg-color: #ececfa;
+    --sub-bg-color: #ffffff;
     --content-color: #6b7a9a;
 }
 
