--- a/index.css
+++ b/index.css
@@ -1,26 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Serif+4:ital,opsz,wght@0,8..60,400;0,8..60,700;1,8..60,400;1,8..60,700&display=swap');
 
+/* Theme */
+
 :root {
     --title-font: 'Playfair Display', sans-serif;
     --subtitle-font: 'Source Serif 4', sans-serif;
+}
+
+:root[color-scheme="light"] {
     --bg-color: #dfe3f1;
-    --accent-color: #435fc2;
+    --accent-color: #d02580;
     --title-color: #404459;
     --sub-bg-color: #ffffff;
     --content-color: #6b7a9a;
     --shadow-color: hsl(227, 40%, 51%, 0.3);
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --bg-color: #2a2d38;
-        --accent-color: #d3d686;
-        --title-color: #e2e4f3;
-        --sub-bg-color: #ffffff;
-        --content-color: #818ca1;
-        --shadow-color: hsla(226, 20%, 63%, 0.3);
-    }
+:root[color-scheme="dark"] {
+    --bg-color: #20232d;
+    --accent-color: #f173bf;
+    --title-color: #e2e4f3;
+    --sub-bg-color: #ffffff;
+    --content-color: #818ca1;
+    --shadow-color: hsla(226, 20%, 63%, 0.3);
 }
+
+/* Reset */
 
 ::selection {
     background: var(--shadow-color);
@@ -43,6 +48,8 @@ html, body {
     background-color: var(--bg-color);
 }
 
+/* Content */
+
 main {
     width: 100%;
     height: 100%;
@@ -51,6 +58,27 @@ main {
     align-items: center;
     flex-direction: column;
     justify-content: center;
+}
+
+#colorScheme {
+    position: fixed;
+    top: 1em;
+    right: 1em;
+    background-color: var(--shadow-color);
+    font-size: 1.2rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: scale .3s;
+}
+
+#colorScheme:hover {
+    scale: 1.1;
+}
+#colorScheme:active {
+    scale: 1;
 }
 
 main > img {
