--- a/index.css
+++ b/index.css
@@ -1,27 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Serif+4:ital,opsz,wght@0,8..60,400;0,8..60,700;1,8..60,400;1,8..60,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gaegu&family=Solway&display=swap");
 
 /* Theme */
 
 :root {
-    --title-font: "Playfair Display", sans-serif;
-    --subtitle-font: "Source Serif 4", sans-serif;
+    --title-font: "Solway", sans-serif;
+    --subtitle-font: "Gaegu", sans-serif;
 }
 
 :root[color-scheme="light"] {
-    --bg-color: #dfe3f1;
-    --accent-color: #d02580;
-    --title-color: #404459;
-    --sub-bg-color: #ffffff;
-    --content-color: #6b7a9a;
+    --bg-color: #f3ecdc;
+    --accent-color: #f9bb29;
+    --title-color: #474747;
+    --content-color: #8e8572;
     --shadow-color: hsl(227, 40%, 51%, 0.3);
 }
 
 :root[color-scheme="dark"] {
-    --bg-color: #212230;
-    --accent-color: #f173bf;
-    --title-color: #e2e4f3;
-    --sub-bg-color: #ffffff;
-    --content-color: #818ca1;
+    --bg-color: #262523;
+    --accent-color: #f9d277;
+    --title-color: #eeeeee;
+    --content-color: #8b8579;
     --shadow-color: hsla(226, 20%, 63%, 0.3);
 }
 
@@ -63,20 +61,22 @@ main {
 
 #colorScheme {
     position: fixed;
-    display: flex;
-    padding: 0;
-    align-items: center;
-    justify-content: center;
     top: 1em;
     right: 1em;
-    background-color: var(--shadow-color);
     font-size: 1.2rem;
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2rem;
+    height: 2rem;
     border: none;
     cursor: pointer;
     border-radius: 50%;
     transition: scale 0.3s;
+    background-color: transparent;
+    background-image: url(./assets/sun.svg);
+    background-size: 100% 100%;
+}
+
+#colorScheme.dark {
+    background-image: url(./assets/moon.svg);
 }
 
 #colorScheme:hover {
@@ -89,46 +89,40 @@ main {
 main > img {
     width: clamp(120px, 30%, 180px);
     filter: saturate(10%) hue-rotate(-30deg);
-    transition: 1.5s all;
+    transition: 0.8s all;
     margin-top: -2.5rem;
-    border-radius: 40%;
+    border-radius: 50%;
 }
 
 main > img:hover {
     filter: none;
-    box-shadow: 10px 10px 50px 0px rgba(255, 103, 21, 0.3), -5px 10px 50px 0px rgba(17, 55, 243, 0.3),
-        -5px -10px 50px 0px rgba(130, 233, 110, 0.3);
 }
 
 main > h1 {
     margin: 0;
-    font-size: clamp(2.5rem, 7vw, 4.5rem);
+    font-size: clamp(2.5rem, 7vw, 4rem);
     text-align: center;
     margin-top: 0.5em;
     font-family: var(--title-font);
+    font-weight: normal;
+    text-wrap: balance;
     letter-spacing: -1px;
     transition: text-shadow 0.3s;
-}
-
-main > h1:hover {
-    text-shadow: 0.06em 0.06em 0 var(--shadow-color);
 }
 
 main > p {
     color: var(--content-color);
     font-size: clamp(1.3rem, 3vw, 1.8rem);
     text-align: center;
-    font-style: italic;
     margin-top: 0.5em;
     font-weight: normal;
     font-family: var(--subtitle-font);
 }
 
-main > a,
-section > a {
+.linkBtn {
     color: var(--accent-color);
     font-size: 1.2rem;
-    font-family: var(--subtitle-font);
+    font-family: var(--title-font);
     text-decoration: none;
 }
 
@@ -157,6 +151,7 @@ section > h2 {
     text-align: center;
     margin-top: 0.5em;
     font-family: var(--title-font);
+    font-weight: normal;
     letter-spacing: -1px;
 }
 
@@ -164,7 +159,6 @@ section > p {
     color: var(--content-color);
     font-size: clamp(1rem, 2vw, 1.6rem);
     text-align: center;
-    font-style: italic;
     margin-top: 0.5em;
     font-weight: normal;
     font-family: var(--subtitle-font);
@@ -186,12 +180,15 @@ section > a {
     filter: saturate(10%) hue-rotate(-30deg);
     transition: 0.6s all;
     border-radius: 1rem;
-    border: 4px solid transparent;
 }
 
 .grid img:hover {
     filter: none;
-    border: 4px solid var(--accent-color);
+    translate: 0 -0.5rem;
+}
+
+.grid img:active {
+    translate: 0 0;
 }
 
 #slides {
@@ -227,7 +224,10 @@ footer > a > img {
 footer > a:hover {
     opacity: 1;
     margin-top: -0.5rem;
-    background-color: var(--sub-bg-color);
+}
+
+footer > a:hover path {
+    fill: var(--title-color);
 }
 
 footer > a:active {
