--- a/slides-theme.css
+++ b/slides-theme.css
@@ -1,19 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Source+Serif+4:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Source+Serif+4:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+#made-by,
+#back {
+    position: absolute;
+    left: 1rem;
+    z-index: 1;
+}
+#made-by {
+    bottom: 1rem;
+}
+#made-by img {
+    width: 12rem;
+}
+#back {
+    top: 1rem;
+}
+#back img {
+    width: 3rem;
+}
+
 .theme-color-white-blue .reveal {
     color: #46516b !important;
 }
-h1, h2 {
-    font-family: 'Outfit', sans-serif !important;
+h1,
+h2 {
+    font-family: "Outfit", sans-serif !important;
     font-weight: bold !important;
     letter-spacing: -1px;
     color: #262937;
 }
-ol, ul, p {
-    font-family: 'Source Serif 4', serif !important;
+ol,
+ul,
+p {
+    font-family: "Source Serif 4", serif !important;
 }
-pre, code {
-    font-size: .85em !important;
-    font-family: 'Menlo', monospace !important;
+pre,
+code {
+    font-size: 0.85em !important;
+    font-family: "Menlo", monospace !important;
     background-color: #e4e8f4;
     line-height: 2.2rem !important;
     padding: 1rem 2rem !important;
